--- a/microservices/config_service/src/main/resources/configurations/gateway_service.yml
+++ b/microservices/config_service/src/main/resources/configurations/gateway_service.yml
@@ -10,25 +10,40 @@ spring:
     name: gateway_service
   cloud:
     gateway:
-      global cors:
+      globalcors:
         corsConfigurations:
           "[/**]":
-            allowedOrigins: "http://localhost:5173"
-            allowedMethods: "*"
-            allowedHeaders: "*"
+            allowedOriginPatterns:
+              - "http://localhost:*"
+              - "http://127.0.0.1:*"
+              - "http://192.168.*.*:*"
+              - "http://10.*.*.*:*"
+              - "exp://*"
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
+              - PATCH
+              - DELETE
+              - OPTIONS
+              - HEAD
+            allowedHeaders:
+              - "*"
+            exposedHeaders:
+              - Authorization
+              - Content-Type
             allowCredentials: true
+            maxAge: 3600
       discovery:
         locator:
           enabled: true
       routes:
-        # - id: payments
-        #   uri: http://localhost:8090
-        #   predicates:
-        #     - Path=/widget_ai/v1/api/payments/**
         - id: auth
-          uri: http://localhost:9090
+          uri: http://localhost:1290
           predicates:
-            - Path=/widget_ai/v1/api/auth/**
+            - Path=/football-pool/v1/api/auth/**
+          filters:
+            - PreserveHostHeader
         # - id: companies
         #   uri: http://localhost:1090
         #   predicates:
